...
                            android:background="@color/transparent"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/ic_date"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:text="@string/date_sholat"/>


                    </LinearLayout>


                    <RelativeLayout
                        android:id="@+id/rl_spin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="10dp"
...
                            android:text="@string/sholat_subuh"
                            android:textSize="18sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/tv_subuh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/waktu_sholat"
                            android:layout_marginEnd="8dp"
                            android:textSize="18sp"
...
                            android:text="@string/sholat_dzuhur"
                            android:textSize="18sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/tv_dzuhur"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/waktu_sholat"
                            android:layout_marginEnd="8dp"
                            android:textSize="18sp"
...
                            android:text="@string/sholat_ashar"
                            android:textSize="18sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/tv_ashar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/waktu_sholat"
                            android:layout_marginEnd="8dp"
                            android:textSize="18sp"
...
                            android:text="@string/sholat_maghrib"
                            android:textSize="18sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/tv_maghrib"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/waktu_sholat"
                            android:layout_marginEnd="8dp"
                            android:textSize="18sp"
...
                            android:text="@string/sholat_isya"
                            android:textSize="18sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/tv_isya"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/waktu_sholat"
                            android:layout_marginEnd="8dp"
                            android:textSize="18sp"
...
