<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold_soft"
    android:orientation="vertical"
    tools:context=".activities.DetailAlquranActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/vegas_gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:contentDescription="@string/button_back"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/btn_back"
                app:layout_constraintStart_toEndOf="@id/btn_back"
                app:layout_constraintTop_toTopOf="@id/btn_back"
                tools:text="Surah" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_title">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#80CCB154"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/top_left"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/border"
                    android:rotationY="-180"
                    android:src="@drawable/corner"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/bottom_left"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/border"
                    android:rotation="180"
                    android:src="@drawable/corner"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/top_right"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/border"
                    android:src="@drawable/corner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/bottom_right"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/border"
                    android:rotationX="-180"
                    android:src="@drawable/corner"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ImageView
                    android:id="@+id/border_left"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/border"
                    android:src="@drawable/border_frame"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_surah"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/border_right"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/border"
                    android:src="@drawable/border_frame"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_surah"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/border_center"
                    android:layout_width="160dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/border"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_surah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/urobilin"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/surah_al_quran" />


                <TextView
                    android:id="@+id/tv_arti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/urobilin"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_surah"
                    tools:text="@string/surah_al_quran" />

                <TextView
                    android:id="@+id/tv_jumlah_ayat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/urobilin"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/border_right"
                    app:layout_constraintStart_toStartOf="@id/border_right"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SmallSp"
                    tools:text="@string/jumlah_ayat" />

                <TextView
                    android:id="@+id/tv_turun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/urobilin"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/border_left"
                    app:layout_constraintStart_toStartOf="@id/border_left"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SmallSp"
                    tools:text="@string/tempat_turun" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_surah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header" />

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/loadingProgress"
                style="@android:style/Widget.Holo.ProgressBar"
                android:layout_width="40sp"
                android:layout_height="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>